<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/kycContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"
    android:visibility="visible"
    tools:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nft_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_bold"
                android:gravity="center|start"
                android:text="@string/new_session"
                android:textColor="@color/text_black_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/sunject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/outfit_bold"
                android:gravity="center|start"
                android:text="@string/subject"
                android:textColor="@color/text_black_color"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_default"
                android:drawableEnd="@drawable/ic_down"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subjectIdTextView"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="52dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white_default"
                    android:fontFamily="@font/outfit_regular"
                    android:gravity="start|center"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:text="@string/math"
                    android:textColor="@color/text_black_color" />

                <Spinner
                    android:id="@+id/subjectSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_down" />
            </LinearLayout>

            <TextView
                android:id="@+id/problem_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/outfit_bold"
                android:gravity="center|start"
                android:text="@string/prob_desc"
                android:textColor="@color/text_black_color"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_white_default"
                android:fontFamily="@font/outfit_regular"
                android:lineSpacingExtra="4dp"
                android:maxLines="7"
                android:padding="15dp"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/outfit_bold"
                android:gravity="center|start"
                android:text="@string/photo"
                android:textColor="@color/text_black_color"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_white_default"
                android:src="@drawable/maths" />
        </LinearLayout>

        <Button
            android:id="@+id/nextbtn"
            style="@style/NFT.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next" />

    </RelativeLayout>
</LinearLayout>