<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="tutors"
            type="com.project.favourapp.Tutors" />
    </data>

    <LinearLayout
        android:id="@+id/kycContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/headerToolbarView"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:foregroundGravity="center"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_back"
                app:tint="@color/text_black_color" />

            <TextView
                android:id="@+id/backPage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center|start"
                android:text="@string/back"
                android:textColor="@color/text_black_color"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingBottom="15dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/nft_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_bold"
                    android:gravity="center|start"
                    android:text="@string/session_summary"
                    android:textColor="@color/text_black_color"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/outfit_bold"
                    android:gravity="center|start"
                    android:text="@string/tutors"
                    android:textColor="@color/text_black_color"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/rootView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_white_tutors"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:padding="10dp"
                        android:src="@drawable/tutor_one"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <TextView
                            android:id="@+id/tutorName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:fontFamily="@font/outfit_bold"
                            android:textColor="@color/text_black_color"
                            android:textSize="15dp" />

                        <LinearLayout
                            android:id="@+id/temp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tutorName"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/timeTutor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/outfit_regular"
                                android:textColor="@color/text_black_color"
                                android:textSize="15dp" />

                            <RatingBar
                                android:id="@+id/rating"
                                style="?android:attr/ratingBarStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:isIndicator="true"
                                android:max="1"
                                android:progressTint="@color/text_color_blue"
                                android:rating="4.5"
                                android:saveEnabled="true" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/view_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/temp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/bg_blue_default"
                            android:fontFamily="@font/outfit_regular"
                            android:gravity="start"
                            android:maxLines="1"
                            android:onClick="viewProfile"
                            android:padding="5dp"
                            android:text="@string/view_profile"
                            android:textColor="@color/text_black_color" />

                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/problem_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/outfit_bold"
                    android:gravity="center|start"
                    android:text="@string/prob_desc"
                    android:textColor="@color/text_black_color"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="12dp"
                    android:cursorVisible="false"
                    android:background="@drawable/bg_white_default"
                    android:fontFamily="@font/outfit_regular"
                    android:lineSpacingExtra="4dp"
                    android:maxLines="7"
                    android:padding="15dp"
                    android:text="@string/description"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/outfit_bold"
                    android:gravity="center|start"
                    android:text="@string/photo"
                    android:textColor="@color/text_black_color"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_white_default"
                    android:src="@drawable/maths" />


                <Button
                    android:id="@+id/nextbtn"
                    style="@style/NFT.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/start_sessions" />
            </LinearLayout>




        </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>